--- a/content/_includes/layout.njk
+++ b/content/_includes/layout.njk
@@ -8,8 +8,14 @@
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.4.6/dist/components.min.css">
 <link rel="stylesheet" href="https://unpkg.com/@tailwindcss/typography@0.1.2/dist/typography.min.css">
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.4.6/dist/utilities.min.css">
-</head>
+</head><link href="/_pagefind/pagefind-ui.css" rel="stylesheet">
+
 <body class="prose-xl">
+  <div id="search" class="search"></div>
+  <article data-pagefind-body>
   {{ content | safe }}
+  </article> 
 </body>
+
+<script src="/_pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#search', showImages: false });"></script>
 </html>
