--- a/content/_includes/layout.njk
+++ b/content/_includes/layout.njk
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.4.6/dist/components.min.css">
 <link rel="stylesheet" href="https://unpkg.com/@tailwindcss/typography@0.1.2/dist/typography.min.css">
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.4.6/dist/utilities.min.css">
-</head><link href="/_pagefind/pagefind-ui.css" rel="stylesheet">
+</head><link href="/pagefind/pagefind-ui.css" rel="stylesheet">
 
 <body class="prose-xl">
   <div id="search" class="search"></div>
@@ -17,5 +17,5 @@
   </article> 
 </body>
 
-<script src="/_pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#search', showImages: false });"></script>
+<script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#search', showImages: false });"></script>
 </html>
