--- a/content/_includes/layout.njk
+++ b/content/_includes/layout.njk
@@ -8,14 +8,14 @@
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.4.6/dist/components.min.css">
 <link rel="stylesheet" href="https://unpkg.com/@tailwindcss/typography@0.1.2/dist/typography.min.css">
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.4.6/dist/utilities.min.css">
-</head><link href="/pagefind/pagefind-ui.css" rel="stylesheet">
+<link href="/pagefind/pagefind-ui.css" rel="stylesheet">
+<script defer src="/webcomponents/pagefind-search.js"></script>
+</head>
 
-<body class="prose-xl">
-  <div id="search" class="search"></div>
-  <article data-pagefind-body>
-  {{ content | safe }}
-  </article> 
-</body>
-
-<script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#search', showImages: false });"></script>
+  <body class="prose xl:prose-xl">
+    <pagefind-search ></pagefind-search>
+    <article data-pagefind-body>
+    {{ content | safe }}
+    </article> 
+  </body>
 </html>
