start webcomponent ui

--- a/content/_includes/layout.njk
+++ b/content/_includes/layout.njk
@@ -23,7 +23,7 @@
     <div class="grid">
       <pagefind-search class="col-span-2 col-start-2 row-start-1 "></pagefind-search>
       <div class="col-start-1 row-start-2 row-span-full">
-        Sidebar
+        {% include "sidebar.njk" %}
       </div>
       <div class="col-start-3 row-span-full">
         <div>{% include "backlinks.njk" %}</div>
