--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -113,6 +114,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --spacing-menubar-height: 3rem;
+  --spacing-menubar-height-mobile: 3rem;
 }
 
 @layer base {
